Fix log4j configuration.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,11 +10,11 @@ log4j.appender.debug.MaxFileSize=100KB
 log4j.appender.debug.MaxBackupIndex=1
 log4j.appender.debug.layout=org.apache.log4j.PatternLayout
 log4j.appender.debug.layout.ConversionPattern=%-5p %t %c{1}:%L - %m%n
-log4j.logger.mbc=DEBUG, stdout, mbc
-log4j.appender.mbc=org.apache.log4j.RollingFileAppender
-log4j.appender.mbc.File=logs/mbc.log
-log4j.appender.mbc.MaxFileSize=100KB
+log4j.logger.nebular=DEBUG, stdout, nebular
+log4j.appender.nebular=org.apache.log4j.RollingFileAppender
+log4j.appender.nebular.File=logs/nebular.log
+log4j.appender.nebular.MaxFileSize=100KB
 # Keep one backup file
-log4j.appender.mbc.MaxBackupIndex=1
-log4j.appender.mbc.layout=org.apache.log4j.PatternLayout
-log4j.appender.mbc.layout.ConversionPattern=%-5p %t %c{1}:%L - %m%n
+log4j.appender.nebular.MaxBackupIndex=1
+log4j.appender.nebular.layout=org.apache.log4j.PatternLayout
+log4j.appender.nebular.layout.ConversionPattern=%-5p %t %c{1}:%L - %m%n
