--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile "io.netty:netty-all:4.1.8.Final"
     compile "io.reactivex.rxjava2:rxjava:2.0.6"
     compile "commons-cli:commons-cli:1.4"
+    compile "org.jline:jline:3.5.1"
     testCompile "junit:junit:4.12"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
