--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,3 +18,5 @@ log4j.appender.nebular.MaxFileSize=100KB
 log4j.appender.nebular.MaxBackupIndex=1
 log4j.appender.nebular.layout=org.apache.log4j.PatternLayout
 log4j.appender.nebular.layout.ConversionPattern=%-5p %t %c{1}:%L - %m%n
+
+log4j.logger.org.jline=ERROR, stdout, nebular
