--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,16 @@ buildscript {
 
 }
 
+plugins {
+    id 'org.springframework.boot' version '1.5.9.RELEASE'
+}
+
 apply plugin: "kotlin"
 apply plugin: 'application'
+
+group = 'nebular'
+version = '0.1.0-alpha'
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -48,13 +56,14 @@ dependencies {
     compile "com.madgag.spongycastle:prov:1.54.0.0"
     compile "com.typesafe:config:1.3.1"
     compile "org.iq80.leveldb:leveldb:0.9"
-    compile "org.slf4j:slf4j-api:1.7.23"
-    compile "org.slf4j:slf4j-log4j12:1.7.23"
-    compile "log4j:log4j:1.2.17"
+    //compile "org.slf4j:slf4j-api:1.7.23"
+    //compile "org.slf4j:slf4j-log4j12:1.7.23"
+    //compile "log4j:log4j:1.2.17"
     compile "io.netty:netty-all:4.1.8.Final"
     compile "io.reactivex.rxjava2:rxjava:2.0.6"
     compile "commons-cli:commons-cli:1.4"
     compile "org.jline:jline:3.5.1"
+    compile "org.springframework.shell:spring-shell-starter:2.0.0.RELEASE"
     testCompile "junit:junit:4.12"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
