--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
         exclude module: 'log4j-over-slf4j'
         exclude module: 'logback-classic'
     }
+    compile project(':lunarcoin-core')
     testCompile "junit:junit:4.12"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
