--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.debug.MaxFileSize=100KB
 log4j.appender.debug.MaxBackupIndex=1
 log4j.appender.debug.layout=org.apache.log4j.PatternLayout
 log4j.appender.debug.layout.ConversionPattern=%-5p %t %c{1}:%L - %m%n
-log4j.logger.lunar=DEBUG, stdout, lunar
+log4j.logger.io.lunarchain=DEBUG, stdout, lunar
 log4j.appender.lunar=org.apache.log4j.RollingFileAppender
 log4j.appender.lunar.File=logs/lunar.log
 log4j.appender.lunar.MaxFileSize=100KB
