--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ jar {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    compile "org.slf4j:slf4j-log4j12:1.7.23"
+    compile "log4j:log4j:1.2.17"
     compile "org.iq80.leveldb:leveldb:0.9"
     compile "commons-cli:commons-cli:1.4"
     compile "org.jline:jline:3.5.1"
